<resources>
    <string name="app_name">Adore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shindindi">Shindindi</string>
    <string name="discover_love_where_your_story_begins">Discover Love: Where Your Story Begins.</string>
    <string name="discover_love">Discover Love:</string>
    <string name="where_your_story_begins"> Where Your Story Begins.</string>
    <string name="let_s_get_started">Let’s Get Started</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="login1">Login</string>
    <string name="meeting_new_people_in_your_area">Meeting New People in Your Area</string>
    <string name="skip">Skip</string>
    <string name="hi_welcome_back_you_ve_been_missed">Hi Welcome back, you’ve been missed</string>
    <string name="email_or_userid">Email or UserID</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="login_with_mobile">Login with Mobile</string>
    <string name="or_login_with">Or login with</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="create_account">Create Account</string>
    <string name="fill_your_information_below_or_register_with_you_social_account">Fill your information below or register with your social account.</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="sign_up1">Sign Up</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="agree_with_terms_condition"><![CDATA[Agree with Terms & Conditions]]></string>
    <string name="terms_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="forgot_password1">Forgot Password?</string>
    <string name="we_will_send_a_confirmation_code_to_the_e_mail_address_attached_to_this_account">We will send a confirmation code to the E-mail address attached to this account.</string>
    <string name="we_will_send_a_confirmation_code_to_the_phone_number_attached_to_this_account">We will send a confirmation code to the Phone number attached to this account.</string>
    <string name="email_mobile">Email/ mobile</string>
    <string name="submit">Submit</string>
    <string name="forgot_with_mobile">Forgot with Mobile</string>
    <string name="forgot_with_email">Forgot with Email</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="verify_code">Verify Code</string>
    <string name="please_enter_the_code_we_just_sent_to">Please enter the code we just sent to </string>
    <string name="didn_t_receive_otp">Didn’t receive OTP?</string>
    <string name="resend_code"><u>Resend code</u></string>
    <string name="verify">Verify</string>
    <string name="verify_your_mobile">Verify Your Mobile</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_the_mobile_number_that_you_want_to_register">Enter the mobile number that you want to register.</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="please_enter_the_code_we_just_sent_to_email_example_email_com">Please enter the code we just sent to email example@email.com</string>
    <string name="new_password">New Password</string>
    <string name="your_new_password_must_be_different_from_previously_used_passwords">Your new password must be different from previously used passwords.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="tell_us_your_phone_number">Tell us your Phone Number?</string>
    <string name="please_enter_the_mobile_number_associated_with_this_account">Please enter the mobile number associated with this account</string>
    <string name="login_with_email">Login with Email</string>
    <string name="next">Next</string>
    <string name="tell_us_about_yourself">Tell us about yourself!</string>
    <string name="your_sexual_orientation">Your sexual orientation?</string>
    <string name="others"><u>Others</u></string>
    <string name="show_my_gender_on_my_profile">Show my gender on my profile</string>
    <string name="shindindi_needs_this_permission">To capture photos and videos, allow Adore access to your camera and your device’s photos, media, and files.</string>
    <string name="everyone">Everyone</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="who_are_you_interested_in">Who are you interested in?</string>
    <string name="how_old_are_you">How Old Are You?</string>
    <string name="select_up_to_5_interests">Select up to 5 interests</string>
    <string name="right_now_i_m_looking_for">Right now I’m looking for...</string>
    <string name="select_gender">Select Gender</string>
    <string name="select">Select</string>
    <string name="this_helps_us_to_find_your_match">This helps us to find your match</string>
    <string name="discover_meaningful_connections_by_selecting_your_interests">Discover meaningful connections by selecting your interests</string>
    <string name="let_s_talk_lifestyle_habits">Let’s talk lifestyle habits.</string>
    <string name="add_photos_or_videos">Add Photos or videos</string>
    <string name="to_boost_your_daily_match_potential_include_your_photos">To boost your daily match potential, include your photos</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="don_t_worry_only_you_can_see_your_personal_date_no_one_else_will_be_able_to_see_it">Don’t worry, only you can see your personal date. No one else will be able to see it.</string>
    <string name="userid">UserID</string>
    <string name="enter_your_bio">Enter your bio...</string>
    <string name="camera">Camera</string>
    <string name="some_error_occured">Some Error Occured</string>
    <string name="session_expired">Session Expired</string>
    <string name="ok">Ok</string>
    <string name="your_device_offline">You are offline</string>
    <string name="unable_to_connect_please_check_your_internet">Unable to connect. Please check your internet connection and try again.</string>
    <string name="bio">Bio</string>
    <string name="show_my_sexual_orientation_on_my_profile">Show my sexual orientation on my profile</string>
    <string name="logout">Logout</string>
    <string name="location">Location</string>
    <string name="add">Add</string>
    <string name="Continue">Continue</string>
    <string name="gallery">Gallery</string>
    <string name="rationale_photo_picker">We need this permission to read images and video from device</string>
    <string name="add_new_story">Add New Story</string>
    <string name="delete">Delete</string>
    <string name="type_a_message_here">Type a message here...</string>
    <string name="height">Height</string>
    <string name="language_speaks">Language Speaks</string>
    <string name="share_profile">Share Profile</string>
    <string name="dislike">Dislike</string>
    <string name="block">Block</string>
    <string name="get_premium_plan">Get Premium Plan</string>
    <string name="my_profile">My Profile</string>
    <string name="general_details">General Details</string>
    <string name="enter_userid">Enter userID</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="my_sexual_orientation">My sexual orientation?</string>
    <string name="your_complexion">Your complexion</string>
    <string name="language_you_speak">Language you speak</string>
    <string name="how_often_do_you_smoke">How often do you smoke?</string>
    <string name="your_profession">Your Profession?</string>
    <string name="do_you_have_any_pets">Do you have any pets?</string>
    <string name="what_is_your_zodiac_sign">What is your zodiac sign?</string>
    <string name="what_is_your_education_level">What is your education level?</string>
    <string name="what_is_your_communication_style">What is your communication style?</string>
    <string name="what_else_makes_you_you">What else makes you, you?</string>
    <string name="update_profile">Update Profile</string>
    <string name="how_often_do_you_drink">How often do you drink?</string>
    <string name="select_city">Select City</string>
    <string name="interested_in">Interested In</string>
    <string name="sort_by">Sort by</string>
    <string name="distance">Distance</string>
    <string name="premium_discovery">Premium Discovery</string>
    <string name="complexion">Complexion</string>
    <string name="what_are_you_into">What are you into?</string>
    <string name="reset_filter">Reset Filter</string>
    <string name="apply">Apply</string>
    <string name="settings">Settings</string>
    <string name="current_password">Current Password</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="reason_for_deleting_your_account">Reason for deleting your account</string>
    <string name="delete_my_account">Delete My Account</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="faq">FAQ</string>
    <string name="notification">Notification</string>
    <string name="invites_friends">Invite Friends</string>
    <string name="to_find_nearby_matches_share_your_location_with_us">To find nearby matches, share your location with us.</string>
    <string name="what_is_your_location">What is your Location?</string>
    <string name="allow_location_access">Allow Location Access</string>
    <string name="enter_location_manually">Enter Location Manually</string>
    <string name="enter_your_location">Enter Your Location</string>
    <string name="go_pro_get_more_benefits"><![CDATA[Go Pro & Get more Benefits]]></string>
    <string name="search_user">Search User</string>
    <string name="search_recent">SEARCH RECENT</string>
    <string name="get_adore_plus">Get Adore Plus</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="socket_uri">http://13.235.137.221:6870</string>
    <string name="call_history">Call History</string>
    <string name="adore">Adore</string>
    <string name="google_maps_key">AIzaSyDxvOzm-9yjdnd5L4iJrVDwk-_KbUkmN8A</string>
    <string name="chat_now">Chat Now</string>
    <string name="location_is_not_avialable">Location is not available!</string>
    <string name="subscribe_adore_now">Subscribe Adore Now.</string>
    <string name="web_client_id">109192566865-s0gkc9kvraqf48pf9bfvbf5td1dpr1lo.apps.googleusercontent.com</string>
    <string name="AGORA_APP_ID">fa37fdf772b948709b0a1d9310ebad9e</string>
    <string name="call_connected">Call Connected</string>
    <string name="callended">Call Ended</string>
    <string name="outgoing_video">outgoingVideo</string>
    <string name="payment_completed">Payment Completed</string>
    <string name="go_to_home">Go to Home</string>
    <string name="view_e_receipt">View E-Receipt</string>
    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="document">Document</string>
    <string name="outgoing_Audio" translatable="false">outgoingAudio</string>
    <string name="calling">Calling...</string>
    <string name="file">File</string>
    <string name="yesterday">Yesterday</string>
    <string name="congratulations">Congratulations!</string>
    <string name="now_you_can_access_all_premium_features">Now you can access all premium features.</string>
</resources>