<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".views.fragments.PaymentCompletedFragment">

        <RelativeLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

<!--            <ImageView-->
<!--                android:id="@+id/backButton"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_centerVertical="true"-->
<!--                android:src="@drawable/back_button" />-->

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="50dp"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:text="@string/payment_completed"
                android:textColor="@color/black_mine_shaft"
                android:textSize="@dimen/_13sdp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/buttonLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topLayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/checked_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:fontFamily="@font/abril_fatface_regular"
                android:text="@string/congratulations"
                android:textColor="@color/black_mine_shaft"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:text="@string/now_you_can_access_all_premium_features"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:fontFamily="@font/inter_regular"
                android:gravity="center_horizontal"
                android:textColor="@color/grey_boulder"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_top_corners_8dp"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:visibility="gone"
                android:id="@+id/viewEReceipt"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_19sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/view_e_receipt" />

            <TextView
                android:id="@+id/goToHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewEReceipt"
                android:layout_marginVertical="@dimen/_4sdp"
                android:fontFamily="@font/inter_medium"

                android:gravity="center_horizontal"
                android:paddingVertical="@dimen/_14sdp"
                android:text="@string/go_to_home"
                android:textColor="@color/theme"
                android:textSize="@dimen/_12sdp" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>