<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.ripenapps.adoreandroid.view_models.SignUpViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:background="@color/white"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/changeLanguage"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/language_icon"
                android:layout_margin="@dimen/_10sdp"/>
            <TextView
                android:paddingHorizontal="@dimen/_10sdp"
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/create_account"
                android:textColor="@color/black_mine_shaft"
                android:textSize="@dimen/_19sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_13sdp"
                android:fontFamily="@font/inter_bold"
                android:paddingHorizontal="@dimen/_40sdp"
                android:gravity="center"
                android:text="@string/fill_your_information_below_or_register_with_you_social_account"
                android:textColor="@color/grey_boulder"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginText" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_36sdp"
                android:text="@string/name"
                android:textColor="@color/black_mine_shaft"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <androidx.appcompat.widget.AppCompatEditText
                android:maxLines="1"
                android:inputType="textPersonName"
                android:maxLength="25"
                android:id="@+id/nameInLogin"
                android:background="@drawable/background_corners_8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:paddingVertical="@dimen/_9sdp"
                android:paddingHorizontal="@dimen/_12sdp"
                android:text="@={viewModel.name}"
                android:hint="@string/enter_name"
                android:textColorHint="@color/grey_boulder"
                android:textColor="@color/black_mine_shaft"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameText" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:text="@string/email"
                android:textColor="@color/black_mine_shaft"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameInLogin" />

            <androidx.appcompat.widget.AppCompatEditText
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text="@={viewModel.email}"
                android:id="@+id/emailInLogin"
                android:background="@drawable/background_corners_8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:paddingVertical="@dimen/_9sdp"
                android:paddingHorizontal="@dimen/_12sdp"
                android:hint="@string/enter_email"
                android:textColorHint="@color/grey_boulder"
                android:textColor="@color/black_mine_shaft"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />
            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:text="@string/password"
                android:textColor="@color/black_mine_shaft"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailInLogin" />

            <RelativeLayout
                android:id="@+id/passwordLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/background_corners_8dp">
                <EditText
                    android:maxLines="1"
                    android:text="@={viewModel.password}"
                    android:id="@+id/passwordLogin"
                    android:layout_toStartOf="@id/password_eye"
                    android:hint="@string/enter_password"
                    android:textColorHint="@color/grey_boulder"
                    android:inputType="textPassword"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_9sdp"
                    android:textColor="@color/black_mine_shaft"
                    android:textSize="@dimen/_10sdp"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <ImageView
                    android:layout_marginEnd="@dimen/_11sdp"
                    android:id="@+id/password_eye"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/close_eye"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/termsConditionsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginHorizontal="@dimen/_18sdp"
                app:layout_constraintTop_toBottomOf="@+id/passwordLayout">
                <ImageView
                    android:onClick="@{viewModel::onClick}"
                    android:id="@+id/termsConditionsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@{viewModel.agreeTermsConditions?@drawable/checked_box:@drawable/unchecked_box}"/>
                <TextView
                    android:id="@+id/termsAndConditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:textColor="@color/black_mine_shaft"
                    android:fontFamily="@font/inter_regular"
                    android:textSize="@dimen/_9sdp"
                    android:text="@string/agree_with_terms_condition"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/signupInSignup"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_19sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:onClick="@{viewModel::onClick}"
                android:text="@string/sign_up1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/termsConditionsLayout" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_40sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signupInSignup">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="@color/white_whisper" />

                <TextView
                    android:id="@+id/orSignUpWith"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/or_sign_up_with"
                    android:textColor="@color/grey_boulder"
                    android:textSize="@dimen/_10sdp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="@color/white_whisper" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_29sdp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <ImageView
                    android:id="@+id/google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:src="@drawable/google_login" />

                <ImageView
                    android:id="@+id/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/facebook_login" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/_29sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <TextView
                    android:id="@+id/alreadyHaveAnAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/grey_boulder"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:id="@+id/loginFromSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/inter_medium"
                    android:onClick="@{viewModel::onClick}"
                    android:text="@string/login"
                    android:textColor="@color/theme"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>